--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
-    <h1>Esto es una prueba de GIT y GITHUB </h1>
-    <p> Mejorando día a día en aprender </p>
+    <div id="container">
+        <div id="post">
+            <h2>Esto es una prueba de GIT y GITHUB atractivo e interesante</h2>
+            <p> Este es el parrafo donde vamos mejorando día a día en aprender </p>
+    </div>
 </body>
 </html>
