estructura inicial de cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h2>Esto es una prueba de GIT y GITHUB atractivo e interesante</h2>
             <p> Este es el parrafo donde vamos mejorando día a día en aprender </p>
