Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
+            <span id="tagline"></span>
         </div>
         <div id="post">
             <h2>Esto es una prueba de GIT y GITHUB atractivo e interesante</h2>
