--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
         <div id="post">
             <h2>Esto es una prueba de GIT y GITHUB atractivo e interesante</h2>
             <p> Este es el parrafo donde vamos mejorando día a día en aprender </p>
+            <p> Los blogs son la mejor forma de compartir información e ideas.
+                Mucho más que ir a conferencias o salir en Youtube. Excepto si eres
+                un rockstar. Pero estadísticamente, no lo eres... por ahora </p>                
     </div>
 </body>
 </html>
