--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog ideal
+                Tu blog master
             </span>
         </div>
         <div id="post">
