--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-           Bienvenido Hyperblog
+           Bienvenido Hyperblog 2.0
             <span id="tagline">
                 Tu blog master
             </span>
